[package]

name = "statrs-fork"
version = "0.17.0"
authors = ["Egor Dmitriev", "Michael Ma"]
description = "Statistical computing library for Rust"
license = "MIT"
keywords = ["probability", "statistics", "stats", "distribution", "math"]
categories = ["science"]
documentation = "https://docs.rs/statrs-fork/0.17.0/statrs/"
homepage = "https://github.com/EgorDm/statrs"
repository = "https://github.com/EgorDm/statrs"
edition = "2018"

[lib]
name = "statrs"
path = "src/lib.rs"

[features]
nightly = []

[dependencies]
rand = "0.8"
nalgebra = { version = "0.31", features = ["rand"] }
approx = "0.5.0"
num-traits = "0.2.14"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "order_statistics"
harness = false
